= Release Notes

== 9.1.0.5 (2024-02-29)
* [.enhancement-tag]#Enhancement# - Added option to <<../filters/api-validator.adoc#, API Validator Filter>> to disable byte code gen in Saxon EE.
* Updated dependencies:
** checker-core: 2.8.0 → 2.9.0
** checker-util: 2.8.0 → 2.9.0

== 9.1.0.4 (2023-09-18)
* Updated dependencies:
** Log4j: 2.17.1 → 2.17.2
** Handlebars: 2.0.0 → 4.3.1

== 9.1.0.3 (202?-??-??)
* Updated dependencies:
** Log4j: 2.17.0 → 2.17.1

== 9.1.0.1 (202?-??-??)
* Updated dependencies:
** Log4j: 2.9.0 → 2.17.0

== 9.1.0.0 (2019-10-14)
* [.enhancement-tag]#Enhancement# | https://repose.atlassian.net/browse/REP-7966[REP-7966] - Added option to <<../architecture/system-model.adoc#, System Model>> to allow a header value to be URL encoded before being sent to the origin service.
* [.enhancement-tag]#Enhancement# | https://repose.atlassian.net/browse/REP-7954[REP-7954] - Updated dependencies:
** Jackson: 2.9.9 → 2.9.10
* [.breaking-tag]#Breaking Change# | https://repose.atlassian.net/browse/REP-6825[REP-6825] - Scala and all dependent libraries upgraded to 2.12 versions.
** Akka: 2.4.20 → 2.5.23
** Akka Http: 1.0 → 10.1.8
** API Checker: 2.7.0 → 2.8.0
** Diffson: 2.0.1 → 2.2.6
** Gattling JsonPath: 0.6.4 → 0.6.10
** Http Delegation: 4.0.0 → 5.0.0
** Play Json: 2.5.2 → 2.7.4
** Scala: 2.11.12 → 2.12.8
** Scala Logging: 2.1.2 → 3.9.2
** Scala Test: 2.2.0 → 3.0.8
** Scopt: 3.2.0 → 3.7.1

== 9.0.1.0 (2019-06-24)
* [.new-tag]#New# | https://repose.atlassian.net/browse/REP-7786[REP-7786] - Added the <<../services/http-logging.adoc#, HTTP Logging Service>>.
* [.new-tag]#New# | https://repose.atlassian.net/browse/REP-7600[REP-7600] - Added the <<../filters/openapi-validator.adoc#, OpenApi Validator Filter>>.
* [.bug-tag]#Bug Fix# | https://repose.atlassian.net/browse/REP-7608[REP-7608] - Fixed bug where *Repose* was acting like it was sending content when the body was empty and chunked encoding was on.