@@ -7,9 +7,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -28,9 +28,9 @@ import javax.xml.transform.TransformerException;
 import javax.xml.transform.URIResolver;
 import javax.xml.transform.stream.StreamSource;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.nio.charset.UnsupportedCharsetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -80,7 +80,7 @@ public class InputStreamUriParameterResolver extends SourceUriResolver {
     public String getHref(InputStream inputStreamReference) {
         try {
             return PREFIX + UriUtils.encodePathSegment(inputStreamReference.toString(), "utf-8");
-        } catch (UnsupportedEncodingException ex) {
+        } catch (UnsupportedCharsetException ex) {
             LOG.trace("Unable to encode the path segment to utf-8", ex);
             return PREFIX + inputStreamReference.toString();
         }
