@@ -7,9 +7,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -29,9 +29,9 @@ import javax.xml.transform.TransformerException;
 import javax.xml.transform.stream.StreamResult;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.nio.charset.UnsupportedCharsetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -63,7 +63,7 @@ public class OutputStreamUriParameterResolver implements OutputURIResolver {
     public String getHref(String name) {
         try {
             return PREFIX + UriUtils.encodePathSegment(name, "utf-8");
-        } catch (UnsupportedEncodingException ex) {
+        } catch (UnsupportedCharsetException ex) {
             LOG.trace("unable to encode path segment to utf-8", ex);
             return PREFIX + name;
         }
