@@ -123,7 +123,7 @@ slf4jVersion=1.7.7
 org.slf4j:slf4j-api=$slf4jVersion
 org.slf4j:jcl-over-slf4j=$slf4jVersion
 org.spockframework:spock-core=0.7-groovy-2.0
-springVersion=4.3.21.RELEASE
+springVersion=5.3.32
 org.springframework:spring-beans=$springVersion
 org.springframework:spring-context=$springVersion
 org.springframework:spring-core=$springVersion
